recipe changes for MC 1.21